--- a/TestCalendar/Test Calendar/Info.plist
+++ b/TestCalendar/Test Calendar/Info.plist
@@ -27,7 +27,7 @@
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
 	<key>UIMainStoryboardFile</key>
-	<string>MakeTestCalendar</string>
+	<string>Main</string>
 	<key>UIRequiredDeviceCapabilities</key>
 	<array>
 		<string>armv7</string>
